[gd_scene load_steps=24 format=3 uid="uid://bykxgox8e8lt5"]

[ext_resource type="Texture2D" uid="uid://cwfm0nkkwel4t" path="res://colors/balloon_blue.png" id="1_i54d5"]
[ext_resource type="Script" path="res://baloon.gd" id="1_jpr5a"]
[ext_resource type="Texture2D" uid="uid://dc7o34tvpuyy3" path="res://colors/balloon_yellow.png" id="1_lyb6v"]
[ext_resource type="Texture2D" uid="uid://brhkmu8g5rs65" path="res://colors/balloon_green.png" id="2_7olfp"]
[ext_resource type="Texture2D" uid="uid://d4dbqhidn6q5q" path="res://colors/balloon_purple.png" id="3_yjmb4"]
[ext_resource type="Texture2D" uid="uid://c4wv3dayr7xil" path="res://colors/balloon_red.png" id="4_do70b"]

[sub_resource type="AtlasTexture" id="AtlasTexture_valew"]
atlas = ExtResource("1_i54d5")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6tra"]
atlas = ExtResource("1_i54d5")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnfvl"]
atlas = ExtResource("1_i54d5")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5epi"]
atlas = ExtResource("2_7olfp")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6o0m"]
atlas = ExtResource("2_7olfp")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_015sn"]
atlas = ExtResource("2_7olfp")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvr2p"]
atlas = ExtResource("3_yjmb4")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfg3q"]
atlas = ExtResource("3_yjmb4")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3fn8"]
atlas = ExtResource("3_yjmb4")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0nuw"]
atlas = ExtResource("4_do70b")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wreph"]
atlas = ExtResource("4_do70b")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfgew"]
atlas = ExtResource("4_do70b")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bvwf8"]
atlas = ExtResource("1_lyb6v")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_imu76"]
atlas = ExtResource("1_lyb6v")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6g2y"]
atlas = ExtResource("1_lyb6v")
region = Rect2(32, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_lgulb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_valew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6tra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnfvl")
}],
"loop": true,
"name": &"blue",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5epi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6o0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_015sn")
}],
"loop": true,
"name": &"green",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvr2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfg3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3fn8")
}],
"loop": true,
"name": &"purple",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0nuw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wreph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfgew")
}],
"loop": true,
"name": &"red",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvwf8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imu76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6g2y")
}],
"loop": true,
"name": &"yellow",
"speed": 3.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_g6bmu"]
radius = 9.40213

[node name="balloon" type="AnimatedSprite2D" groups=["balloon"]]
position = Vector2(345, 369)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_lgulb")
animation = &"blue"
frame_progress = 0.560856
script = ExtResource("1_jpr5a")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-1, -1)
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.6, -5.2)
shape = SubResource("CircleShape2D_g6bmu")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-0.4, -7.25)
scale = Vector2(0.8, 0.745)

[node name="health" type="RichTextLabel" parent="."]
offset_left = -5.2
offset_top = -17.8
offset_right = 34.8
offset_bottom = 22.2
theme_override_font_sizes/normal_font_size = 15
text = "1"

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
